# ProgramingC

./: README.md  laba  laba.c  na3scriny.docx  sort.c  temperatura
1half/: README.md  dcvs  na3scriny.docx  temperatura.c
1half/proglab3/: algoritm4  algoritm4.c  algoritm5  algoritm5.c  algoritm6  algoritm7  algoritm7.c  algoritm8
1half/proglab5/: 1.c
1half/proglab6/: 1.c
1half/proglab7/: 1.c
2half/Posix/: Posix.c  Posix3.c  Posix5.c  Posix7.c  Posix8-9.c  graf.py  laba7.md  res.csv
2half/Sort/: Sorting.c
2half/Spiski/: Spiski.c
2half/Test/: sort.c  sort.h  sort_tests  test_sorts.c
2half/Translater/: CMakeLists.txt  Germany.txt  Russian.txt  main.c  test_dict.txt  test_translate.c  translate.c  translate.h
2half/lib/: DINTRAIN_exe  TRAIN_exe  Train.h  func.c  main.c  Практическое задание 6.docx
2half/text/: file.txt  reversed_file.txt  text.c
DPSA/BinarySearch/: BinarySearch.c
DPSA/BubbleSort/: Bubblesort.c
DPSA/DigitalSort/: DigitalSort.c
DPSA/HeapSort/: HeapSort.c
DPSA/Index/: Index.c
DPSA/InsertSort/: InsertSort.c
DPSA/List/: List.c
DPSA/MergeSort/: MergeSort.c
DPSA/QuickSort/: QuickSort.c
DPSA/SAoS/: SAos.c
DPSA/SelectionSort/: SelectionSort.c
DPSA/ShakerSort/: ShakerSort.c
DPSA/ShellSort/: ShellSort.c
DPSA/Sort/: 1.c
proglab3/: algoritm6.c  algoritm8.c
proglab4/: prim  prim.c
proglab5/: 1  2  2.c
proglab6/: 1
proglab7/: 1
proglab8/: 1  1.c
proglab9/: 1  1.c
